fix: updated spacing for vaious section in filter slideout

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -975,11 +975,12 @@ label {
   align-items: center;
   min-height: 2.25rem;
   min-width: 115px;
+  padding-left: 2.75rem;
 
   &:hover {
     background-color: #FFFFFF;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.09), 0px 2.41177px 3.01471px rgba(0, 0, 0, 0.058643), 0px 1.00172px 1.25216px rgba(0, 0, 0, 0.045), 0px 0.362304px 0.45288px rgba(0, 0, 0, 0.031357);
-    border-radius: 0.5rem;
+    border-radius: 0.4rem;
     padding-right: 0.5rem;
     z-index: 1;
   }
@@ -1003,9 +1004,9 @@ label {
         align-items: center;
         background-color: #FFFFFF;
         padding-right: 0.52rem;
-        border-radius: 0 0.5rem 0.5rem 0;
+        border-radius: 0 0.4rem 0.4rem 0;
         min-height: 2.28rem;
-        min-width: 90px;
+        min-width: 100px;
         white-space: nowrap;
         box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.09), 0px 2.41177px 3.01471px rgba(0, 0, 0, 0.058643), 0px 1.00172px 1.25216px rgba(0, 0, 0, 0.045), 0px 0.362304px 0.45288px rgba(0, 0, 0, 0.031357);
         clip-path: inset(0px -15px -2px 0px);
